@@ -955,6 +955,8 @@ public final class Server {
         public CompletableFuture<InitializeResult> initialize(InitializeParams init) {
             NbCodeClientCapabilities capa = NbCodeClientCapabilities.get(init);
             client.setClientCaps(capa);
+            workspaceService.registerConfigChangeListeners();
+            textDocumentService.registerConfigChangeListeners();
             hackConfigureGroovySupport(capa);
             hackNoReuseOfOutputsForAntProjects();
             List<FileObject> projectCandidates = new ArrayList<>();
@@ -1049,44 +1051,53 @@ public final class Server {
 
         private void initializeOptions() {
             getWorkspaceProjects().thenAccept(projects -> {
-                ConfigurationItem item = new ConfigurationItem();
-                // PENDING: what about doing just one roundtrip to the client- we may request multiple ConfiguratonItems in one message ?
-                item.setSection(client.getNbCodeCapabilities().getConfigurationPrefix() + NETBEANS_JAVA_HINTS);
-                client.configuration(new ConfigurationParams(Collections.singletonList(item))).thenAccept(c -> {
-                    if (c != null && !c.isEmpty() && c.get(0) instanceof JsonObject) {
-                        textDocumentService.updateJavaHintPreferences((JsonObject) c.get(0));
-                    }
-                    else {
+                List<String> defaultConfigs = List.of(NETBEANS_JAVA_HINTS, NETBEANS_PROJECT_JDKHOME);
+                List<String> projectConfigs = List.of(NETBEANS_FORMAT, NETBEANS_JAVA_IMPORTS);
+
+                AtomicReference<FileObject> projectDirectory = new AtomicReference<>(null);
+                if (projects != null && projects.length > 0) {
+                    projectDirectory.set(projects[0].getProjectDirectory());
+                }
+
+                List<String> allConfigs = new ArrayList<>(defaultConfigs);
+                if (projectDirectory.get() != null) {
+                    allConfigs.addAll(projectConfigs);
+                }
+
+                ClientConfigurationManager.getInstance().getConfigurations(
+                        client,
+                        allConfigs,
+                        projectDirectory.get() != null ? Utils.toUri(projectDirectory.get()) : null
+                ).thenAccept(configs -> {
+                    if (configs != null && !configs.isEmpty()) {
+                        if (configs.get(0) instanceof JsonObject) {
+                            textDocumentService.updateJavaHintPreferences((JsonObject) configs.get(0));
+                        } else {
+                            textDocumentService.hintsSettingsRead = true;
+                            textDocumentService.reRunDiagnostics();
+                        }
+
+                        JsonPrimitive newProjectJDKHomePath = null;
+                        if (configs.size() > 1 && configs.get(1) instanceof JsonPrimitive) {
+                            newProjectJDKHomePath = (JsonPrimitive) configs.get(1);
+                        }
+                        textDocumentService.updateProjectJDKHome(newProjectJDKHomePath);
+
+                        if (projectDirectory.get() != null) {
+                            if (configs.size() > 2 && configs.get(2) instanceof JsonObject) {
+                                workspaceService.updateJavaFormatPreferences(projectDirectory.get(), (JsonObject) configs.get(2));
+                            }
+
+                            if (configs.size() > 3 && configs.get(3) instanceof JsonObject) {
+                                workspaceService.updateJavaImportPreferences(projectDirectory.get(), (JsonObject) configs.get(3));
+                            }
+                        }
+                    } else {
                         textDocumentService.hintsSettingsRead = true;
                         textDocumentService.reRunDiagnostics();
+                        textDocumentService.updateProjectJDKHome(null);
                     }
                 });
-                item.setSection(client.getNbCodeCapabilities().getConfigurationPrefix() + NETBEANS_PROJECT_JDKHOME);
-                client.configuration(new ConfigurationParams(Collections.singletonList(item))).thenAccept(c -> {
-                    JsonPrimitive newProjectJDKHomePath = null;
-
-                    if (c != null && !c.isEmpty() && c.get(0) instanceof JsonPrimitive) {
-                        newProjectJDKHomePath = (JsonPrimitive) c.get(0);
-                    } else {
-                    }
-                    textDocumentService.updateProjectJDKHome(newProjectJDKHomePath);
-                });
-                if (projects != null && projects.length > 0) {
-                    FileObject fo = projects[0].getProjectDirectory();
-                    item.setScopeUri(Utils.toUri(fo));
-                    item.setSection(client.getNbCodeCapabilities().getConfigurationPrefix() + NETBEANS_FORMAT);
-                    client.configuration(new ConfigurationParams(Collections.singletonList(item))).thenAccept(c -> {
-                        if (c != null && !c.isEmpty() && c.get(0) instanceof JsonObject) {
-                            workspaceService.updateJavaFormatPreferences(fo, (JsonObject) c.get(0));
-                        }
-                    });
-                    item.setSection(client.getNbCodeCapabilities().getConfigurationPrefix() + NETBEANS_JAVA_IMPORTS);
-                    client.configuration(new ConfigurationParams(Collections.singletonList(item))).thenAccept(c -> {
-                        if (c != null && !c.isEmpty() && c.get(0) instanceof JsonObject) {
-                            workspaceService.updateJavaImportPreferences(fo, (JsonObject) c.get(0));
-                        }
-                    });
-                }
             });
         }
 
